--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
-#hero{
+#home{
     height: 100vh;
     width: 100%;
     background-image: url(bg2.jpg);
